--- a/docker/release/Dockerfile.portfolio
+++ b/docker/release/Dockerfile.portfolio
@@ -1,4 +1,4 @@
-FROM dockerproductionaws/microtrader-base
+FROM 364775663450.dkr.ecr.us-east-2.amazonaws.com/dockerproductionaws/microtrader-base
 MAINTAINER Justin Menga <justin.menga@gmail.com>
 LABEL application.component=microtrader-portfolio
 
